@@ -8,11 +8,12 @@
           = link_to url_for_new_issue(@project, only_path: true) do
             = icon('exclamation-circle fw')
             New issue
-      - if can?(current_user, :create_merge_request, @project)
+      - merge_project = can?(current_user, :create_merge_request, @project) ? @project : current_user.fork_of(@project)
+      - if merge_project
         %li
-          = link_to new_namespace_project_merge_request_path(@project.namespace, @project) do
+          = link_to new_namespace_project_merge_request_path(merge_project.namespace, merge_project) do
             = icon('tasks fw')
-            New merge request
+            New Merge Request
       - if can?(current_user, :create_snippet, @project)
         %li
           = link_to new_namespace_project_snippet_path(@project.namespace, @project) do
